# didactic-bassoon

./: Agente_fiscal_final.py  README.md  Relatorio_Analise_Fiscal_IA.docx  agente_avancado_gemma3_v2.py  pyproject.toml
