[project]
name = "didactic-bassoon"
version = "6.1.0"
description = "Sistema Brasileiro de Análise de Documentos Fiscais"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "groq>=0.28.0",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "streamlit>=1.46.0",
    "tabulate>=0.9.0",
    "watchdog>=6.0.0",
]
